--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Prevention</name>
 	<description>Demo project for Spring Boot</description>
-
 	<properties>
 		<java.version>1.8</java.version>
 		<!-- 如果pom文件有 bug就加上下面这句话,然后更新项目右键项目 maven update -->
@@ -41,6 +40,11 @@
 			<version>2.7.0</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
 		<dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
