--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,6 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://47.95.141.31/prevention?characterEncoding=utf-8
+  jackson:
+    time-zone: GMT+8
 
