--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,5 @@ spring:
     url: jdbc:mysql://47.95.141.31/prevention?characterEncoding=utf-8
   jackson:
     time-zone: GMT+8
-
+logging:
+  config: classpath:log4j2.xml
