--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
-		<!--google很好用的一个类库 -->
+		<!--google很好用的一个库 -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
