增加了老师第一次注册功能

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 			<artifactId>guava</artifactId>
 			<version>27.0.1-jre</version>
 		</dependency>
-
+		<!-- 微信小程序需要的 -->
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
