--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://47.95.141.31/prevention?characterEncoding=utf-8
+    url: jdbc:mysql://47.95.141.31/prevention?characterEncoding=utf-8&serverTimezone=GMT%2B8
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
