--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.servlet.context-path=/prevention
 logging.level.cn.edu.bcu.ls=DEBUG
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
+multipart.maxFileSize=10Mb
+multipart.maxRequestSize=10Mb
