--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,43 @@
 	</properties>
 
 	<dependencies>
+		<!-- redis -->
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+
+		</dependency>
+		<dependency>
+
+			<groupId>org.apache.commons</groupId>
+
+			<artifactId>commons-pool2</artifactId>
+
+		</dependency>
+
+
+		<!-- excel -->
+		<dependency>
+
+			<groupId>org.apache.poi</groupId>
+
+			<artifactId>poi</artifactId>
+
+			<version>4.0.0</version>
+
+		</dependency>
+
+		<dependency>
+
+			<groupId>org.apache.poi</groupId>
+
+			<artifactId>poi-ooxml</artifactId>
+
+			<version>4.0.0</version>
+
+		</dependency>
 
 		<!-- 小辣椒 -->
 		<dependency>
@@ -60,22 +97,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+
 			
-			<!-- 去除springboot自带的logback -->
-			 <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>logback-classic</artifactId>
-                </exclusion>
-            </exclusions>
 
 		</dependency>
 		<dependency>
@@ -83,10 +110,7 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.1.1</version>
 		</dependency>
-		 <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-        </dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
