--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/*.xml
+
 spring:
   datasource:
     username: root
@@ -9,7 +10,17 @@ spring:
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
-    
-logging:
-  config: classpath:log4j2.xml
+  redis:
+    host: 47.95.141.31
+    database: 0
+    port: 6379
+    password: prevention
+    lettuce:
+      pool:
+        max-active: 200
+        max-idle: 10
+        max-wait: -1
+        min-idle: 0
+    timeout: 1000
+
 
