--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 
 		</dependency>
 		<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.24</version>
+		</dependency>
+		<dependency>
 
 			<groupId>org.apache.commons</groupId>
 
