--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,12 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 
 		</dependency>
+		
+		<!--json包  -->
 		<dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.58</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.58</version>
 		</dependency>
 		<dependency>
 
@@ -107,7 +109,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 
-			
+
 
 		</dependency>
 		<dependency>
@@ -115,7 +117,7 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.1.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
