--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 
 		</dependency>
-		
-		<!--json包  -->
+
+		<!--json包 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
@@ -45,7 +45,12 @@
 			<artifactId>commons-pool2</artifactId>
 
 		</dependency>
-
+		<!-- 加密 -->
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 
 		<!-- excel -->
 		<dependency>
@@ -128,6 +133,11 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
